--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@
 }
 
 /* Hero Section */
-.hero-section .image-section img {
+.hero-section img {
     display: block;
     margin: 0 auto;
     max-width: 75%;
@@ -107,6 +107,23 @@
     display: none;
 }
 
+/* About Section */
+.about-section img {
+    border-radius: var(--border-radius);
+    max-width: 75%;
+    display: block;
+    margin: 0 auto;
+}
+.about-section .icon-boxes {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    text-align: center;
+}
+.about-section .icon-boxes h1 {
+    margin: 0;
+    font-size: 2rem;
+}
 
 @media (min-width: 768px) {
     /* Hero Section */
@@ -115,6 +132,9 @@
     }
     .hero-section .row {
         flex-direction: row-reverse;
+    }
+    .hero-section h1 {
+        font-size: 2.5rem;
     }
     .hero-section .btn-alt {
         display: block;
