--- a/css/style.css
+++ b/css/style.css
@@ -163,6 +163,15 @@
     border-radius: var(--border-radius);
     padding: 2rem;
 }
+.card > i {
+    color: var(--primary-color);
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+}
+.card > h2 {
+    color: var(--primary-color);
+    margin-bottom: 0.5rem;
+}
 
 
 
@@ -182,6 +191,11 @@
     /* Skills Section */
     .skills-section .row {
         gap: 15%;
+    }
+
+    /* Services Section */
+    .card {
+        margin: 1rem;
     }
 }
 @media (min-width: 992px) {
