--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     background-color: var(--dark-color);
     position: sticky;
     top: 0;
+    z-index: 10;
     transition: background-color 0.5s ease;
 }
 .nav-sticky, .show-nav {
