--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
 .nav-sticky, .show-nav {
     background-color: var(--gray-color);
 }
+.nav-sticky {
+    box-shadow: 0px 5px 50px black;
+}
 .nav-section .container {
     display: flex;
     justify-content: space-between;
