--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,8 @@
     display: none;
 }
 .popup-box {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     border-radius: var(--border-radius);
     background-color: var(--gray-color);
     position: relative;
