--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
     background-position: center;
     z-index: 10;
 }
-
 /* Hire Me PopUp */
 .popup {
     position: fixed;
@@ -26,7 +25,7 @@
 .popup-box {
     width: 100%;
     height: 100%;
-    border-radius: var(--border-radius);
+    border-radius: var(--rounded-corner);
     background-color: var(--gray-color);
     position: relative;
     top: 50%;
@@ -44,21 +43,20 @@
     color: var(--primary-color);
     cursor: pointer;
 }
-
 /* Navigation Area */
 .nav-section {
-    padding: 0.8rem;
+    padding: 1rem;
     background-color: var(--dark-color);
     position: sticky;
     top: 0;
     z-index: 5;
-    transition: background-color 0.5s ease;
+    transition: background-color 0.3s ease;
 }
-.nav-sticky, .show-nav {
+.nav-sticky, .nav-sticky .navigation, .show-nav, .show-nav .navigation {
     background-color: var(--gray-color);
 }
 .nav-sticky {
-    box-shadow: 0px 5px 50px black;
+    box-shadow: 0px 5px 50px var(--dark-color);
 }
 .nav-section .container {
     display: flex;
@@ -74,7 +72,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    gap: 1.5rem;
     background-color: var(--dark-color);
     position: absolute;
     top: 100%;
@@ -82,29 +80,23 @@
     right: 0;
     height: 0;
     overflow: hidden;
-    transition: height 0.3s ease , background-color 0.5s ease;
-}
-.nav-sticky .navigation, .show-nav .navigation {
-    background-color: var(--gray-color);
+    transition: height 0.3s ease , background-color 0.3s ease;
 }
 .show-nav .navigation {
     height: 400px;
-    box-shadow: 0px 50px 50px -40px black;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    box-shadow: 0px 50px 50px -40px var(--dark-color);
+    border-bottom-left-radius: 1.5rem;
+    border-bottom-right-radius: 1.5rem;
 }
 .nav-link {
     text-transform: uppercase;
     transition: color 0.3s ease;
 }
-.nav-link:hover {
-    color: var(--primary-color);
-}
-.nav-active {
+.nav-link:hover , .nav-active {
     color: var(--primary-color);
 }
 .nav-link.btn {
-    color: white;
+    color: var(--light-color);
 }
 
 .hamburger {
@@ -164,10 +156,10 @@
 
 /* About Section */
 .about-section img {
-    border-radius: var(--border-radius);
     max-width: 75%;
     display: block;
     margin: 0 auto;
+    border-radius: var(--rounded-corner);
 }
 .about-section .icon-boxes {
     display: flex;
@@ -212,8 +204,8 @@
 /* Services Section */
 .card {
     background-color: var(--gray-color);
-    border-radius: var(--border-radius);
     padding: 2rem;
+    border-radius: var(--rounded-corner);
     position: relative;
     z-index: 1;
 }
@@ -233,7 +225,7 @@
     border-radius: inherit;
 }
 .card:hover * {
-    color: white;
+    color: var(--light-color);
     transition: color 0.5s ease, background-color 0.5s ease;
 }
 .card:hover .btn , .card:hover .btn i {
@@ -247,9 +239,7 @@
 }
 .card > h2 {
     color: var(--primary-color);
-    margin-bottom: 0.5rem;
 }
-
 
 
 @media (min-width: 768px) {
@@ -258,10 +248,9 @@
         width: 500px;
         height: 400px;
     }
-
     /* Hero Section */
     .hero-section {
-        margin-top: var(--mt-section);
+        margin-top: 4rem;
     }
     .hero-section .row {
         flex-direction: row-reverse;
@@ -274,12 +263,10 @@
         margin-left: 0;
         margin-top: 3rem;
     }
-
     /* Skills Section */
     .skills-section .row {
         gap: 15%;
     }
-
     /* Services Section */
     .card {
         margin: 1rem;
@@ -291,17 +278,17 @@
         width: 700px;
         height: 500px;
     }
-
+    /* Navigation Menu */
     .hamburger {
         display: none;
     }
     .nav-section {
-        margin-top: 1rem;
+        margin-top: 0.5rem;
     }
     .navigation {
         height: initial;
         position: static;
         flex-direction: row;
-        gap: 15px;
+        gap: 1rem;
     }
 }
