--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
     background-position: center;
     z-index: 10;
 }
+
 /* Hire Me PopUp */
 .popup {
     position: fixed;
@@ -25,7 +26,7 @@
 .popup-box {
     width: 100%;
     height: 100%;
-    border-radius: var(--rounded-corner);
+    border-radius: var(--border-radius);
     background-color: var(--gray-color);
     position: relative;
     top: 50%;
@@ -43,20 +44,21 @@
     color: var(--primary-color);
     cursor: pointer;
 }
+
 /* Navigation Area */
 .nav-section {
-    padding: 1rem;
+    padding: 0.8rem;
     background-color: var(--dark-color);
     position: sticky;
     top: 0;
     z-index: 5;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.5s ease;
 }
-.nav-sticky, .nav-sticky .navigation, .show-nav, .show-nav .navigation {
+.nav-sticky, .show-nav {
     background-color: var(--gray-color);
 }
 .nav-sticky {
-    box-shadow: 0px 5px 50px var(--dark-color);
+    box-shadow: 0px 5px 50px black;
 }
 .nav-section .container {
     display: flex;
@@ -72,7 +74,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 1.5rem;
+    gap: 25px;
     background-color: var(--dark-color);
     position: absolute;
     top: 100%;
@@ -80,23 +82,29 @@
     right: 0;
     height: 0;
     overflow: hidden;
-    transition: height 0.3s ease , background-color 0.3s ease;
+    transition: height 0.3s ease , background-color 0.5s ease;
+}
+.nav-sticky .navigation, .show-nav .navigation {
+    background-color: var(--gray-color);
 }
 .show-nav .navigation {
     height: 400px;
-    box-shadow: 0px 50px 50px -40px var(--dark-color);
-    border-bottom-left-radius: 1.5rem;
-    border-bottom-right-radius: 1.5rem;
+    box-shadow: 0px 50px 50px -40px black;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
 }
 .nav-link {
     text-transform: uppercase;
     transition: color 0.3s ease;
 }
-.nav-link:hover , .nav-active {
+.nav-link:hover {
+    color: var(--primary-color);
+}
+.nav-active {
     color: var(--primary-color);
 }
 .nav-link.btn {
-    color: var(--light-color);
+    color: white;
 }
 
 .hamburger {
@@ -156,10 +164,10 @@
 
 /* About Section */
 .about-section img {
+    border-radius: var(--border-radius);
     max-width: 75%;
     display: block;
     margin: 0 auto;
-    border-radius: var(--rounded-corner);
 }
 .about-section .icon-boxes {
     display: flex;
@@ -204,8 +212,8 @@
 /* Services Section */
 .card {
     background-color: var(--gray-color);
+    border-radius: var(--border-radius);
     padding: 2rem;
-    border-radius: var(--rounded-corner);
     position: relative;
     z-index: 1;
 }
@@ -225,7 +233,7 @@
     border-radius: inherit;
 }
 .card:hover * {
-    color: var(--light-color);
+    color: white;
     transition: color 0.5s ease, background-color 0.5s ease;
 }
 .card:hover .btn , .card:hover .btn i {
@@ -239,7 +247,9 @@
 }
 .card > h2 {
     color: var(--primary-color);
+    margin-bottom: 0.5rem;
 }
+
 
 
 @media (min-width: 768px) {
@@ -248,9 +258,10 @@
         width: 500px;
         height: 400px;
     }
+
     /* Hero Section */
     .hero-section {
-        margin-top: 4rem;
+        margin-top: var(--mt-section);
     }
     .hero-section .row {
         flex-direction: row-reverse;
@@ -263,10 +274,12 @@
         margin-left: 0;
         margin-top: 3rem;
     }
+
     /* Skills Section */
     .skills-section .row {
         gap: 15%;
     }
+
     /* Services Section */
     .card {
         margin: 1rem;
@@ -278,17 +291,17 @@
         width: 700px;
         height: 500px;
     }
-    /* Navigation Menu */
+
     .hamburger {
         display: none;
     }
     .nav-section {
-        margin-top: 0.5rem;
+        margin-top: 1rem;
     }
     .navigation {
         height: initial;
         position: static;
         flex-direction: row;
-        gap: 1rem;
+        gap: 15px;
     }
 }
