--- a/css/utilities.css
+++ b/css/utilities.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: var(--section-gap);
 }
 .row > * {
     flex: 1;
@@ -18,6 +18,7 @@
 }
 .title-area h2 {
     font-size: 2rem;
+    margin-bottom: var(--mb-title);
 }
 
 .btn {
@@ -43,6 +44,7 @@
 .text-primary {
     color: var(--primary-color);
 }
+
 
 @media (min-width: 576px) {
     .container {
