--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,9 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: var(--dark-color);
-    background-image: url(../images/loading.svg);
-    background-repeat: no-repeat;
-    background-position: center;
+    background: var(--dark-color) url(../images/loading.svg) no-repeat center;
     z-index: 10;
 }
-
 /* Hire Me PopUp */
 .popup {
     position: fixed;
@@ -20,13 +16,13 @@
     left: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.6);
-    z-index: 6;
+    z-index: 7;
     display: none;
 }
 .popup-box {
     width: 100%;
     height: 100%;
-    border-radius: var(--border-radius);
+    border-radius: var(--rounded-corner);
     background-color: var(--gray-color);
     position: relative;
     top: 50%;
@@ -44,21 +40,20 @@
     color: var(--primary-color);
     cursor: pointer;
 }
-
 /* Navigation Area */
 .nav-section {
-    padding: 0.8rem;
+    padding: 1rem;
     background-color: var(--dark-color);
     position: sticky;
     top: 0;
-    z-index: 5;
-    transition: background-color 0.5s ease;
+    z-index: 6;
+    transition: background-color 0.3s ease;
 }
-.nav-sticky, .show-nav {
+.nav-sticky, .show-nav, .nav-sticky .navigation, .show-nav .navigation {
     background-color: var(--gray-color);
 }
 .nav-sticky {
-    box-shadow: 0px 5px 50px black;
+    box-shadow: 0px 5px 50px var(--dark-color);
 }
 .nav-section .container {
     display: flex;
@@ -74,7 +69,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 25px;
+    gap: 1.5rem;
     background-color: var(--dark-color);
     position: absolute;
     top: 100%;
@@ -82,31 +77,24 @@
     right: 0;
     height: 0;
     overflow: hidden;
-    transition: height 0.3s ease , background-color 0.5s ease;
-}
-.nav-sticky .navigation, .show-nav .navigation {
-    background-color: var(--gray-color);
+    transition: height 0.3s ease , background-color 0.3s ease;
 }
 .show-nav .navigation {
     height: 400px;
-    box-shadow: 0px 50px 50px -40px black;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
+    box-shadow: 0px 50px 50px -40px var(--dark-color);
+    border-bottom-left-radius: 1rem;
+    border-bottom-right-radius: 1rem;
 }
 .nav-link {
     text-transform: uppercase;
     transition: color 0.3s ease;
 }
-.nav-link:hover {
-    color: var(--primary-color);
-}
-.nav-active {
+.nav-link:hover, .nav-active {
     color: var(--primary-color);
 }
 .nav-link.btn {
-    color: white;
+    color: var(--light-color);
 }
-
 .hamburger {
     display: flex;
     flex-direction: column;
@@ -147,27 +135,17 @@
     width: 30px;
     transform: rotate(-45deg);
 }
-
 /* Hero Section */
 .hero-section {
     margin-top: 1rem;
-}
-.hero-section img {
-    display: block;
-    margin: 0 auto;
-    max-width: 75%;
 }
 .hero-section .btn-alt {
     display: inline-block;
     margin-left: 2rem;
 }
-
 /* About Section */
 .about-section img {
-    border-radius: var(--border-radius);
-    max-width: 75%;
-    display: block;
-    margin: 0 auto;
+    border-radius: var(--rounded-corner);
 }
 .about-section .icon-boxes {
     display: flex;
@@ -179,7 +157,6 @@
     margin: 0;
     font-size: 2rem;
 }
-
 /* Skills Section */
 .skills-section .row {
     gap: 0;
@@ -202,18 +179,16 @@
 }
 .progress {
     height: 100%;
-    background-color: var(--primary-color);
-    background-image: linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
+    background: var(--primary-color) linear-gradient(45deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
     background-size: 1rem 1rem;
     border-bottom-left-radius: inherit;
     border-top-left-radius: inherit;
 }
-
 /* Services Section */
 .card {
     background-color: var(--gray-color);
-    border-radius: var(--border-radius);
     padding: 2rem;
+    border-radius: var(--rounded-corner);
     position: relative;
     z-index: 1;
 }
@@ -221,9 +196,9 @@
     content: "";
     position: absolute;
     top: 100%;
+    bottom: 0;
     left: 0;
     right: 0;
-    bottom: 0;
     background-color: var(--primary-color);
     z-index: -1;
     transition: top 0.5s ease;
@@ -233,24 +208,21 @@
     border-radius: inherit;
 }
 .card:hover * {
-    color: white;
+    color: var(--light-color);
     transition: color 0.5s ease, background-color 0.5s ease;
 }
 .card:hover .btn , .card:hover .btn i {
-    background-color: white;
+    background-color: var(--light-color);
     color: var(--primary-color);
 }
 .card > i {
     color: var(--primary-color);
     font-size: 2.5rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
 }
 .card > h2 {
     color: var(--primary-color);
-    margin-bottom: 0.5rem;
 }
-
-
 
 @media (min-width: 768px) {
     /* Hire Me Popup */
@@ -258,10 +230,9 @@
         width: 500px;
         height: 400px;
     }
-
     /* Hero Section */
     .hero-section {
-        margin-top: var(--mt-section);
+        margin-top: 3.8rem;
     }
     .hero-section .row {
         flex-direction: row-reverse;
@@ -274,12 +245,10 @@
         margin-left: 0;
         margin-top: 3rem;
     }
-
     /* Skills Section */
     .skills-section .row {
         gap: 15%;
     }
-
     /* Services Section */
     .card {
         margin: 1rem;
@@ -291,17 +260,16 @@
         width: 700px;
         height: 500px;
     }
-
     .hamburger {
         display: none;
     }
     .nav-section {
-        margin-top: 1rem;
+        margin-top: 0.5rem;
     }
     .navigation {
         height: initial;
         position: static;
         flex-direction: row;
-        gap: 15px;
+        gap: 1rem;
     }
 }
