--- a/style.css
+++ b/style.css
@@ -1,3 +1,96 @@
+/* Preset */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+:root {
+    --primary-color: #ff4500;
+    --secondary-color: #d35400;
+    --dark-color: #000000;
+    --light-color: #ffffff;
+    --gray-color: #2e2e2e;
+    --rounded-corner: 0.5rem;
+}
+* , *::before , *::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html {
+    scroll-behavior: smooth;
+    scroll-padding-top: 80px;
+}
+body {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    background-color: var(--dark-color);
+    color: var(--light-color);
+    overflow: hidden;
+}
+section {
+    margin-top: 3.8rem;
+}
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 500;
+    margin-bottom: 0.5rem;
+}
+p {
+    margin-bottom: 1.5rem;
+}
+a {
+    text-decoration: none;
+    color: var(--light-color);
+}
+img {
+    max-width: 75%;
+    display: block;
+    margin: 0 auto;
+}
+ul {
+    list-style: none;
+}
+/* Utility Classes */
+.container {
+    width: 100%;
+    padding: 0 1rem;
+    margin: 0 auto;
+}
+.row {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+.row > * {
+    flex: 1;
+}
+.title-area {
+    text-align: center;
+}
+.title-area h2 {
+    font-size: 2rem;
+}
+.btn {
+    display: inline-block;
+    background-color: var(--primary-color);
+    color: var(--light-color);
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+.btn:hover {
+    background-color: var(--secondary-color);
+}
+.btn-alt {
+    display: inline-block;
+    font-weight: 500;
+    color: var(--primary-color);
+    transition: color 0.3s ease;
+}
+.btn-alt:hover {
+    color: var(--secondary-color);
+}
+.text-primary {
+    color: var(--primary-color);
+}
 /* Preloader */
 .loading {
     position: fixed;
@@ -5,7 +98,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    background: var(--dark-color) url(../images/loading.svg) no-repeat center;
+    background: var(--dark-color) url(images/loading.svg) no-repeat center;
     z-index: 10;
 }
 /* Hire Me PopUp */
@@ -224,7 +317,23 @@
     color: var(--primary-color);
 }
 
+@media (min-width: 576px) {
+    .container {
+        width: 540px;
+    }
+}
 @media (min-width: 768px) {
+    /* Utility Classes */
+    .container {
+        width: 720px;
+    }
+    .row {
+        flex-direction: row;
+    }
+    .title-area {
+        width: 50%;
+        margin: 0 auto;
+    }
     /* Hire Me Popup */
     .popup-box {
         width: 500px;
@@ -255,6 +364,10 @@
     }
 }
 @media (min-width: 992px) {
+    /* Utility Classes */
+    .container {
+        width: 960px;
+    }
     /* Hire Me PopUp */
     .popup-box {
         width: 700px;
@@ -271,5 +384,15 @@
         position: static;
         flex-direction: row;
         gap: 1rem;
+    }
+}
+@media (min-width: 1200px) {
+    .container {
+        width: 1140px;
+    }
+}
+@media (min-width: 1400px) {
+    .container {
+        width: 1320px;
     }
 }
